refactor: update user layers after security configuration